complete register and header name

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,6 @@
 VITE_API_BASE_URL=http://localhost:8000/api
+
+# USERS
+# yuval 0509525201 6443401
+#rotem 0547686750 123456
+#admin 0509525202 admin123
