--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,9 @@
 PORT=8000
 MONGO_URL=mongodb+srv://yuvalleberstein21:Q0MDqsSmgh0Vq2DN@cluster0.tmuomqm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=secretkeyforappointmentapplication
-BUCKET_NAME=easymarknew
-AWS_ACCESS_KEY_ID=AKIAXA77O3JAW32WY5A6
-AWS_SECRET_ACCESS_KEY=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
+# BUCKET_NAME=easymarknew
+# AWS_ACCESS_KEY_ID=AKIAXA77O3JAW32WY5A6
+# AWS_SECRET_ACCESS_KEY=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
 
 
 # yuvalleberstein21
