--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.1",
+    "date-fns": "^3.6.0",
     "flowbite": "^2.3.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
