--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.1",
     "date-fns": "^3.6.0",
     "flowbite": "^2.3.0",
+    "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-datetime-picker": "^6.0.1",
