--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "date-fns": "^3.6.0",
     "flowbite": "^2.3.0",
     "framer-motion": "^11.2.10",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.13.0",
     "react-datepicker": "^6.9.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.2.0",
